<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/quidditchfield" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zeroDp"
            android:layout_weight="4"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="@dimen/zeroDp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:id="@+id/team_A_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/garamond"
                    android:paddingTop="@dimen/paddingTopTeams"
                    android:text="@string/teamAString"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/teamTextSize" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/potterfont"
                    android:paddingBottom="@dimen/landscapePaddingBottomScore"
                    android:paddingTop="@dimen/landscapePaddingTopScore"
                    android:text="@string/zeroString"
                    android:textColor="@color/white"
                    android:textSize="@dimen/scoreTextSize" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/landscapeButtonMargin"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/tenPointsA"
                        android:layout_width="@dimen/zeroDp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/landscapeButtonMargin"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:fontFamily="@font/potterfont"
                        android:onClick="displayTenPointsA"
                        android:text="@string/quaffleButtonString"
                        android:textSize="@dimen/landscapeButtonTextSize" />

                    <Button
                        android:id="@+id/thirtyPointsA"
                        android:layout_width="@dimen/zeroDp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/landscapeButtonMargin"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:fontFamily="@font/potterfont"
                        android:onClick="displayThirtyPointsA"
                        android:text="@string/snitchButtonString"
                        android:textSize="@dimen/landscapeButtonTextSize" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="@dimen/widthOfDividingLine"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/marginTopOfDividingLine"
                android:background="@android:color/darker_gray" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="@dimen/zeroDp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:id="@+id/team_B_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/garamond"
                    android:paddingTop="@dimen/paddingTopScore"
                    android:text="@string/teamBString"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/teamTextSize" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/potterfont"
                    android:paddingBottom="@dimen/landscapePaddingBottomScore"
                    android:paddingTop="@dimen/landscapePaddingTopScore"
                    android:text="@string/zeroString"
                    android:textColor="@color/white"
                    android:textSize="@dimen/scoreTextSize" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/landscapeButtonMargin"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/tenPointsB"
                        android:layout_width="@dimen/zeroDp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/landscapeButtonMargin"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:fontFamily="@font/potterfont"
                        android:onClick="displayTenPointsB"
                        android:text="@string/quaffleButtonString"
                        android:textSize="@dimen/landscapeButtonTextSize" />

                    <Button
                        android:id="@+id/thirtyPointsB"
                        android:layout_width="@dimen/zeroDp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/landscapeButtonMargin"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:fontFamily="@font/potterfont"
                        android:onClick="displayThirtyPointsB"
                        android:text="@string/snitchButtonString"
                        android:textSize="@dimen/landscapeButtonTextSize" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zeroDp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/countdownTitle"
                android:layout_width="@dimen/zeroDp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/garamond"
                android:text="Overtime Countdown"
                android:textColor="@color/white"
                android:textSize="@dimen/landscapeButtonTextSize" />

            <TextView
                android:id="@+id/countdown"
                android:layout_width="@dimen/zeroDp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/garamond"
                android:text="00:00:00"
                android:textColor="@color/white"
                android:textSize="@dimen/landscapeButtonTextSize" />

            <Button
                android:id="@+id/countdown_start_pause"
                android:layout_width="@dimen/zeroDp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/landscapeButtonMargin"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:fontFamily="@font/garamond"
                android:text="Start"
                android:textSize="@dimen/landscapeButtonTextSize" />

            <Button
                android:id="@+id/match_summary"
                android:layout_width="@dimen/zeroDp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/landscapeButtonMargin"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:fontFamily="@font/garamond"
                android:onClick="matchSummaryButtonOnClick"
                android:text="@string/matchSummaryButtonString"
                android:textSize="@dimen/landscapeButtonTextSize" />

            <Button
                android:id="@+id/obliviate_button"
                android:layout_width="@dimen/zeroDp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/landscapeButtonMargin"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:fontFamily="@font/garamond"
                android:onClick="resetAndReturnToStart"
                android:text="@string/obliviateString"
                android:textSize="@dimen/landscapeButtonTextSize" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>